menambahkan apa yang ingin saya pelajari kedepannya

--- a/index.html
+++ b/index.html
@@ -91,7 +91,86 @@
     </div>
 
     <!-- About page -->
-     
+
+    <!-- introduction -->
+    <div class="container about">
+      <img src="/properties/picture/1730009952536.jpg" alt="" />
+      <div class="aboutText">
+        <h2>Hello,</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+          quaerat eaque, nemo suscipit cupiditate expedita tempore sint, quis
+          voluptatem magni quasi? Minus accusamus, fuga facilis eligendi aliquid
+          praesentium tenetur ratione illo! Nihil veniam commodi dignissimos
+          cumque culpa voluptate at qui, quidem expedita officia quo vel,
+          repellendus voluptates molestias? Numquam, deleniti.
+        </p>
+        <hr />
+        <div class="bio">
+          <div class="bio1">
+            <div>
+              <b>Name:</b>
+              <p>Brian Zakariya</p>
+            </div>
+            <div>
+              <b>Age: </b>
+              <p>17</p>
+            </div>
+            <div><b>Freelance: </b>Available</div>
+          </div>
+          <div class="bio2">
+            <div>
+              <b>Job Title: </b>
+              <p>-</p>
+            </div>
+            <div>
+              <b>Location: </b>
+              <p>Indonesia</p>
+            </div>
+            <div>
+              <b>E-Mail: </b>
+              <p>brianzakariya@gmail.com</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Service -->
+    <div class="container-fluid service">
+      <div class="serviceTitle">
+        <h2>What am I currently learning?</h2>
+      </div>
+      <div class="serviceCard">
+        <div class="card" style="width: 18rem">
+          <img src="/properties/picture/6753580-200.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="/properties/picture/2230389-512.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="/properties/picture/6677449-200.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- bootstrap script -->
     <script
