menambahkan bagian untuk saya memperlihatkan project yang sudah dikerjakan

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
 
     <!-- Home page -->
-    <div class="container-fluid banner">
+    <div class="container-fluid banner" id="home">
       <video
         id="background-video"
         autoplay
@@ -93,17 +93,22 @@
     <!-- About page -->
 
     <!-- introduction -->
-    <div class="container about">
+    <div class="container about" id="about">
       <img src="/properties/picture/1730009952536.jpg" alt="" />
       <div class="aboutText">
-        <h2>Hello,</h2>
+        <h2>Hello, I'm</h2>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
-          quaerat eaque, nemo suscipit cupiditate expedita tempore sint, quis
-          voluptatem magni quasi? Minus accusamus, fuga facilis eligendi aliquid
-          praesentium tenetur ratione illo! Nihil veniam commodi dignissimos
-          cumque culpa voluptate at qui, quidem expedita officia quo vel,
-          repellendus voluptates molestias? Numquam, deleniti.
+          Brian Zakariya. I am a high school student with a strong interest in
+          informatics engineering, specifically web development, full stack
+          development, and machine learning. Even though I am still in school, I
+          have clear goals and am actively developing my skills in the area
+          through various personal projects.
+          <br />
+          <br />
+          This website will feature projects I have worked on, both
+          independently and as part of a team, highlighting my dedication to
+          continuous learning and growth. I am always open to new experiences
+          that can help me improve my skills in the professional world.
         </p>
         <hr />
         <div class="bio">
@@ -143,31 +148,155 @@
       </div>
       <div class="serviceCard">
         <div class="card" style="width: 18rem">
-          <img src="/properties/picture/6753580-200.png" class="card-img-top" alt="..." />
+          <div class="cardImg">
+            <img
+              src="/properties/picture/6753580-200.png"
+              class="card-img-top"
+              alt="..."
+            />
+          </div>
+          <hr />
           <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+            <b class="card-text"> Website Developer </b>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="/properties/picture/2230389-512.png" class="card-img-top" alt="..." />
+          <div class="cardImg">
+            <img
+              src="/properties/picture/2230389-512.png"
+              class="card-img-top"
+              alt="..."
+            />
+          </div>
+          <hr />
           <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+            <b class="card-text"> Full Stack Developer </b>
           </div>
         </div>
         <div class="card" style="width: 18rem">
-          <img src="/properties/picture/6677449-200.png" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
+          <div class="cardImg">
+            <img
+              src="/properties/picture/6677449-200.png"
+              class="card-img-top"
+              alt="..."
+            />
           </div>
+          <hr />
+          <div class="card-body">
+            <b class="card-text"> Machine Learning Engineer </b>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="work" class="project">
+      <h2>Project</h2>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <div class="cardItems">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    bokep quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="cardItems">
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+              <div class="card" style="width: 18rem">
+                <img
+                  src="/properties/picture/480x320img.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExample"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
         </div>
       </div>
     </div>
