membuat bagian footer (contact) dan memperbaiki bagian link supaya tempatnya pas

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg w-100 z-3 position-fixed top-0">
       <div class="container">
         <a class="navbar-brand fw-bold text-light" href="#home"
           >Brian Zakariya</a
@@ -93,58 +93,57 @@
     <!-- About page -->
 
     <!-- introduction -->
-    <div class="container about" id="about">
-      <img src="/properties/picture/1730009952536.jpg" alt="" />
-      <div class="aboutText">
-        <h2>Hello, I'm</h2>
-        <p>
-          Brian Zakariya. I am a high school student with a strong interest in
-          informatics engineering, specifically web development, full stack
-          development, and machine learning. Even though I am still in school, I
-          have clear goals and am actively developing my skills in the area
-          through various personal projects.
-          <br />
-          <br />
-          This website will feature projects I have worked on, both
-          independently and as part of a team, highlighting my dedication to
-          continuous learning and growth. I am always open to new experiences
-          that can help me improve my skills in the professional world.
-        </p>
-        <hr />
-        <div class="bio">
-          <div class="bio1">
-            <div>
-              <b>Name:</b>
-              <p>Brian Zakariya</p>
+    <div id="about">
+      <div class="container about">
+        <img src="/properties/picture/1730009952536.jpg" alt="" />
+        <div class="aboutText">
+          <h2>Hello, I'm</h2>
+          <p>
+            Brian Zakariya. I am a high school student with a strong interest in
+            informatics engineering, specifically web development, full stack
+            development, and machine learning. Even though I am still in school,
+            I have clear goals and am actively developing my skills in the area
+            through various personal projects.
+            <br />
+            <br />
+            This website will feature projects I have worked on, both
+            independently and as part of a team, highlighting my dedication to
+            continuous learning and growth. I am always open to new experiences
+            that can help me improve my skills in the professional world.
+          </p>
+          <hr />
+          <div class="bio">
+            <div class="bio1">
+              <div>
+                <b>Name:</b>
+                <p>Brian Zakariya</p>
+              </div>
+              <div>
+                <b>Age: </b>
+                <p>17</p>
+              </div>
+              <div><b>Freelance: </b>Available</div>
             </div>
-            <div>
-              <b>Age: </b>
-              <p>17</p>
-            </div>
-            <div><b>Freelance: </b>Available</div>
-          </div>
-          <div class="bio2">
-            <div>
-              <b>Job Title: </b>
-              <p>-</p>
-            </div>
-            <div>
-              <b>Location: </b>
-              <p>Indonesia</p>
-            </div>
-            <div>
-              <b>E-Mail: </b>
-              <p>brianzakariya@gmail.com</p>
+            <div class="bio2">
+              <div>
+                <b>Job Title: </b>
+                <p>-</p>
+              </div>
+              <div>
+                <b>Location: </b>
+                <p>Indonesia</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-
     <!-- Service -->
     <div class="container-fluid service">
       <div class="serviceTitle">
-        <h2>What am I currently learning?</h2>
+        <h2 style="text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+        0px 8px 13px rgba(0,0,0,0.1),
+        0px 18px 23px rgba(0,0,0,0.1);">What am I currently learning?</h2>
       </div>
       <div class="serviceCard">
         <div class="card" style="width: 18rem">
@@ -189,117 +188,165 @@
       </div>
     </div>
 
-    <div id="work" class="project">
-      <h2>Project</h2>
-      <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="cardItems">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    bokep quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+    <div id="work">
+      <div class="project">
+        <br />
+        <h2 style="text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+        0px 8px 13px rgba(0,0,0,0.1),
+        0px 18px 23px rgba(0,0,0,0.1);">Project</h2>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="cardItems">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      lorem quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
                 </div>
-              </div>
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <div class="cardItems">
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
-                </div>
-              </div>
-              <div class="card" style="width: 18rem">
-                <img
-                  src="/properties/picture/480x320img.png"
-                  class="card-img-top"
-                  alt="..."
-                />
-                <div class="card-body">
-                  <p class="card-text">
-                    Some quick example text to build on the card title and make
-                    up the bulk of the card's content.
-                  </p>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
+            <div class="carousel-item">
+              <div class="cardItems">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="/properties/picture/480x320img.png"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and make
+                      up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button
+              class="carousel-control-prev"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="prev"
+            >
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+              class="carousel-control-next"
+              type="button"
+              data-bs-target="#carouselExample"
+              data-bs-slide="next"
+            >
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExample"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
         </div>
       </div>
+
     </div>
+
+    <footer id="contact">
+      <div class="footerOne">
+        <div class="footerLogo">
+          <h2>Brian Zakariya</h2>
+          <p>Jakarta, Indonesia</p>
+        </div>
+        <div class="footerBio">
+          <div class="phone">
+            <img src="/properties/picture/icon/phone.png" alt="" />
+            <p>+62 858 8253 xxxx</p>
+          </div>
+          <div class="email">
+            <img src="/properties/picture/icon/img.icons8.png" alt="" />
+            <p>brianzakariya@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footerTwo">
+        <div class="footerSocialMedia">
+          <a target="_blank" href="https://github.com/brianzakariyahusein"
+            ><img src="/properties/picture/icon/github_3291667.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.instagram.com/brianzakariya/?hl=en"
+            ><img src="/properties/picture/icon/social_15707749.png" alt=""
+          /></a>
+          <a target="_blank" href="https://www.linkedin.com/in/brian-zakariya-9a1583309/"
+            ><img src="/properties/picture/icon/linked.png" alt=""
+          /></a>
+        </div>
+        <div class="footerLink">
+          <a href="#home">home</a>
+          <a href="#about">about</a>
+          <a href="#work">work</a>
+          <a href="#contact">contact</a>
+        </div>
+        <div class="footerLogo">
+          <h2>Brian Zakariya</h2>
+        </div>
+      </div>
+    </footer>
 
     <!-- bootstrap script -->
     <script
