--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Brian Zakariya || Portofolio</title>
 
     <!-- css style -->
-    <link rel="stylesheet" href="/properties/css/styles.css" />
+    <link rel="stylesheet" href="./properties/css/styles.css" />
     <!-- bootstrap style -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -21,13 +21,15 @@
       href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Pre:wght@400..700&display=swap"
       rel="stylesheet"
     />
-    
   </head>
-  <body class="bg-secondary-subtle">
+  <body style="background-color: #efefef">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg w-100 z-3 position-fixed top-0">
       <div class="container bs-body-bg">
-        <a class="navbar-brand" href="#home"><h5>Brian Zakariya</h5><hr></a>
+        <a class="navbar-brand" href="#home"
+          ><h5>Brian Zakariya</h5>
+          <hr
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,8 +52,7 @@
       </div>
     </nav>
     <!-- Home Page -->
-    <div class="container-fluid">
-      <div class="videoLayer"></div>
+    <div id="home" class="container-fluid">
       <div>
         <video
           id="background-video"
@@ -68,6 +69,27 @@
             class="backVideo"
           />
         </video>
+      </div>
+      <div class="homeItems">
+        <div class="homeText">
+          <h3>Hi, I am</h3>
+          <div class="conText">
+            A high school student with an interest in working as
+            <div id="flip">
+              <div>
+                <div>Full Stack Developer</div>
+              </div>
+              <div>
+                <div>Machine Learning Engineer</div>
+              </div>
+              <div>
+                <div>Website Developer</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="homeImage">
+        </div>
       </div>
     </div>
 
