update home and about

--- a/index.html
+++ b/index.html
@@ -72,25 +72,80 @@
       </div>
       <div class="homeItems">
         <div class="homeText">
-          <h3>Hi, I am</h3>
+          <h3>
+            Hi, I'm <br /><span style="margin: 0 0 0 60px">Brian Zakariya</span>
+          </h3>
+
           <div class="conText">
-            A high school student with an interest in working as
-            <div id="flip">
-              <div>
-                <div>Full Stack Developer</div>
-              </div>
-              <div>
-                <div>Machine Learning Engineer</div>
-              </div>
-              <div>
-                <div>Website Developer</div>
+            <div style="display: flex;">
+              <p>A high school student with an interest in working as</p>
+              <div id="flip">
+                <div>
+                  <div><p>Full Stack Developer</p></div>
+                </div>
+                <div>
+                  <div><p>Machine Learning Engineer</p></div>
+                </div>
+                <div>
+                  <div><p>Website Developer</p></div>
+                </div>
               </div>
             </div>
           </div>
         </div>
         <div class="homeImage">
+          <img src="./properties/picture/brianZakariya.png" alt="" />
         </div>
       </div>
+    </div>
+
+    <div id="about">
+      <div class="container about">
+        <div class="aboutImage">
+          <img src="./properties/picture/1731735409212.jpg" alt="" />
+        </div>
+        <div class="aboutText">
+          <h2>Hello, I'm</h2>
+          <p>
+            Brian Zakariya. I am a high school student with a strong interest in
+            informatics engineering, specifically web development, full stack
+            development, and machine learning. Even though I am still in school,
+            I have clear goals and am actively developing my skills in the area
+            through various personal projects.
+            <br />
+            <br />
+            This website will feature projects I have worked on, both
+            independently and as part of a team, highlighting my dedication to
+            continuous learning and growth. I am always open to new experiences
+            that can help me improve my skills in the professional world.
+          </p>
+          <hr />
+          <div class="bio">
+            <div class="bio1">
+              <div>
+                <b>Name:</b>
+                <p>Brian Zakariya</p>
+              </div>
+              <div>
+                <b>Age: </b>
+                <p>17</p>
+              </div>
+              <div><b>Freelance: </b>Available</div>
+            </div>
+            <div class="bio2">
+              <div>
+                <b>Job Title: </b>
+                <p>-</p>
+              </div>
+              <div>
+                <b>Location: </b>
+                <p>Indonesia</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid"></div>
     </div>
 
     <!-- js script -->
