menambahkan bagian baru untuk contnt berikutnya dan menambahkan button dibagian home

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </h3>
 
           <div class="conText">
-            <div style="display: flex;">
+            <div style="display: flex">
               <p>A high school student with an interest in working as</p>
               <div id="flip">
                 <div>
@@ -91,6 +91,12 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="homeButton">
+            <a href="#about" type="button" class="btn btn-outline-primary me-2">See Content</a>
+            <a href="#contact" type="button" class="btn btn-outline-secondary">
+              Contact Me
+            </a>
           </div>
         </div>
         <div class="homeImage">
@@ -145,7 +151,7 @@
           </div>
         </div>
       </div>
-      <div class="container-fluid"></div>
+      <div class="container-fluid wcid"></div>
     </div>
 
     <!-- js script -->
