menyelesaikan work page dengan menambahkan card yang bisa di slide

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             </div>
           </div>
           <div class="homeButton">
-            <a href="#about" type="button" class="btn btn-outline-primary me-2">See Content</a>
+            <a href="#about" type="button" class="btn btn-outline-primary me-2"
+              >See Content</a
+            >
             <a href="#contact" type="button" class="btn btn-outline-secondary">
               Contact Me
             </a>
@@ -105,6 +107,7 @@
       </div>
     </div>
 
+    <!-- About Page -->
     <div id="about">
       <div class="container about">
         <div class="aboutImage">
@@ -152,6 +155,157 @@
         </div>
       </div>
       <div class="container-fluid wcid"></div>
+    </div>
+
+    <!-- Work Page -->
+    <div id="work">
+      <div class="container work">
+        <div
+          id="carouselExampleInterval"
+          class="carousel slide"
+          data-bs-ride="carousel"
+        >
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <div class="cardItems">
+                <div class="card">
+                  <img
+                    src="./properties/picture/dagang.jpeg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Selling snacks such as "Basreng" and "Spring Rolls" during my first year of high
+                      school.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="./properties/picture/panitia1.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Serving as a committee member for the Independence Day
+                      event in my residential cluster and participating as the
+                      event host (MC).
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="./properties/picture/panitia2.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      The following year, I was invited again to join the
+                      committee for the Independence Day event and actively
+                      participated in discussions about organizing the upcoming
+                      activities.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <div class="cardItems">
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="./properties/picture/band.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Participated in the closing night of the Independence Day
+                      event by performing as a guitarist.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="./properties/picture/lombamasak.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Participated in a cooking competition in my neighborhood
+                      and won 3rd place.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img
+                    src="./properties/picture/band.jpg"
+                    class="card-img-top"
+                    alt="..."
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Spent my free time working as a ballboy from 2021 to 2024.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="carousel-item">
+              <div class="cardItems">
+                <div class="card" style="width: 18rem">
+                  <img src="..." class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img src="..." class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem">
+                  <img src="..." class="card-img-top" alt="..." />
+                  <div class="card-body">
+                    <p class="card-text">
+                      Some quick example text to build on the card title and
+                      make up the bulk of the card's content.
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div> -->
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
     </div>
 
     <!-- js script -->
