--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
                   />
                   <div class="card-body">
                     <p class="card-text">
-                      Selling snacks such as "Basreng" and "Spring Rolls" during my first year of high
-                      school.
+                      Selling snacks such as "Basreng" and "Spring Rolls" during
+                      my first year of high school.
                     </p>
                   </div>
                 </div>
@@ -307,6 +307,53 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer Page -->
+    <footer id="contact">
+      <div class="footerOne">
+        <div class="footerLogo">
+          <h2>Brian Zakariya</h2>
+          <p>Jakarta, Indonesia</p>
+        </div>
+        <div class="footerBio">
+          <div class="phone">
+            <img src="/properties/picture/icon/phone.png" alt="" />
+            <p>+62 858 8253 xxxx</p>
+          </div>
+          <div class="email">
+            <img src="/properties/picture/icon/img.icons8.png" alt="" />
+            <p>brianzakariya@gmail.com</p>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="footerTwo">
+        <div class="footerSocialMedia">
+          <a target="_blank" href="https://github.com/brianzakariyahusein"
+            ><img src="/properties/picture/icon/github_3291667.png" alt=""
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.instagram.com/brianzakariya/?hl=en"
+            ><img src="/properties/picture/icon/social_15707749.png" alt=""
+          /></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/in/brian-zakariya-9a1583309/"
+            ><img src="/properties/picture/icon/linked.png" alt=""
+          /></a>
+        </div>
+        <div class="footerLink">
+          <a href="#home">home</a>
+          <a href="#about">about</a>
+          <a href="#work">work</a>
+          <a href="#contact">contact</a>
+        </div>
+        <div class="footerLogos">
+          <h2>Brian Zakariya</h2>
+        </div>
+      </div>
+    </footer>
 
     <!-- js script -->
     <script src="/properties/js/script.js"></script>
