--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <!-- css style -->
     <link rel="stylesheet" href="./properties/css/styles.css" />
+    <!-- css mdia queary -->
+     
     <!-- bootstrap style -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -77,8 +79,9 @@
           </h3>
 
           <div class="conText">
-            <div style="display: flex">
-              <p>A high school student with an interest in working as</p>
+            <div>
+              <p>A high school student with an interest in 
+                <br>working as</p>
               <div id="flip">
                 <div>
                   <div><p>Full Stack Developer</p></div>
